# tribe-logger-lib

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  test.js  test_.js  test_get_bitmap.js  test_get_logs.js  test_method.js  test_ts.js  test_window_imgetter.js  tsconfig.json
src/: addon.cc  async.cc  async.h  env.h  index.ts  pi_est.cc  pi_est.h  sync.cc  sync.h  timer.cc  timer.h  tribe_logger.cc  tribe_logger.h  types.h  window_img_getter.cc  window_img_getter.h  window_img_streamer.cc  window_img_streamer.h
src/window-imagetter/: addon.cc  bitmap_result.h  error.h  index.ts  sync.cc  sync.h  tribe_logger.cc  tribe_logger.h  window_img_getter.cc  window_img_getter.h
